Fix bug not showing reference titles in autocomplete #476330771578174

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -27,13 +27,15 @@ span.CategoryType {
 
 .ReferenceAllInlineButAuthorStyle;
 
-.Reference {
-    margin-bottom: 20px;
-
+.categoryDetailMainInfoReference {
     .Icon,
     .Name {
         display: none !important;
     }
+}
+
+.Reference {
+    margin-bottom: 20px;
 
     .Author {
         font-size: 18px;
